kubernetes/.archive/omada-controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omada-controller
spec:
  replicas: 1
  selector:
    matchLabels: {}
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - image: mbentley/omada-controller:5.9
          name: omada-controller
          resources: {}

          volumeMounts:
            - mountPath: /opt/tplink/EAPController/data
              name: omada-data
            - mountPath: /opt/tplink/EAPController/logs
              name: omada-logs

      restartPolicy: Always
      terminationGracePeriodSeconds: 60

      volumes:
        - name: omada-data
          persistentVolumeClaim:
            claimName: omada-data
        - name: omada-logs
          persistentVolumeClaim:
            claimName: omada-logs
