kubernetes/.archive/omada-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omada-controller
spec:
  type: ClusterIP
  ports:
    # Management portal
    - port: 8043
      name: manage-https
      protocol: TCP
      targetPort: 8043
    - port: 8088
      name: manage-http
      protocol: TCP
      targetPort: 8088

    # User portal
    - port: 8843
      name: portal-https
      protocol: TCP
      targetPort: 8843
    - port: 8888
      name: portal-http
      protocol: TCP
      targetPort: 8088

    # Omada Controller and Omada Discovery Utility manage the Omada devices
    # running firmware fully adapted to Omada Controller v4*
    - port: 29812
      name: adopt-v1
      protocol: TCP
      targetPort: 29812

    # Omada Controller can be discovered by the Omada APP within the same network through this port
    - port: 27001
      name: app-discovery
      protocol: TCP
      targetPort: 27001

    # Omada Controller and Omada Discovery Utility discover Omada devices
    - port: 29810
      name: port-discovery
      protocol: TCP
      targetPort: 29810

    # Omada Controller and Omada Discovery Utility manage the Omada devices
    # running firmware fully adapted to Omada Controller v4*
    - port: 29811
      name: manager-v1
      protocol: TCP
      targetPort: 29811

    # Omada Controller and Omada Discovery Utility manage the Omada devices
    # running firmware fully adapted to Omada Controller v5*
    - port: 29814
      name: manager-v2
      protocol: TCP
      targetPort: 29814

    # When upgrading the firmware for the Omada devices running firmware fully adapted to Omada Controller v4*
    - port: 29813
      name: port-upgrade-v2
      protocol: TCP
      targetPort: 29813

  selector: {}
