kubernetes/.archive/omada-controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omada-controller
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: &host "omada-controller.tools.internal.place"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: omada-controller
                port:
                  number: 8043

#          - path: /user
#            pathType: Prefix
#            backend:
#              service:
#                name: omada-controller
#                port:
#                  number: 8843
  tls:
    - hosts:
        - *host
      secretName: omada-controller-tls
